index.css
/* ... */
h2 {
  font-family: var(--heading-font);
  font-size: var(--h3-size);
  font-weight: 600;
  letter-spacing: -0.25px;
  margin: 0;
  width: 100%;
}

h3 {
  font-family: var(--heading-font);
  font-size: var(--h3-size);
  font-weight: 500;
  margin: 0;
  width: 100%;
}

h4 {
  font-family: var(--heading-font);
  font-size: var(--h4-size);
  font-weight: 500;
  letter-spacing: 0.25px;
  margin: 0;
  width: 100%;
}

h5 {
  font-family: var(--heading-font);
  font-size: var(--h5-size);
  font-weight: 500;
  margin: 0;
  width: 100%;
}

h6 {
  font-family: var(--heading-font);
  font-size: var(--h6-size);
  font-weight: 500;
  margin: 0;
  width: 100%;
}

a {
  color: var(--purple-1);
  font-weight: 500;
  text-decoration: none;
  transition: color 0.25s ease;
}

a:hover {
  color: var(--primary-accent);
}

p {
  font-size: var(--p-size);
  font-weight: 400;
  line-height: var(--p-height);
  margin: var(--spacing-md) 0;
}

.subtitle1,
.subtitle2 {
  color: var(--purple-1);
  font-family: var(--heading-font);
  font-size: var(--subtitle-size);
  font-weight: 500;
  line-height: var(--subtitle-height);
}

.subtitle2 {
  color: var(--blue-1);
}

.secondary-text {
  color: var(--text-gray);
  font-size: var(--secondary-text-size);
  letter-spacing: 0.25px;
  line-height: var(--secondary-text-height);
}

.primary-btn,
.secondary-btn {
  background-color: var(--primary-accent);
  border: none;
  border-radius: var(--standard-border-radius);
  color: var(--text-light);
  font-family: var(--body-font);
  font-size: var(--btn-size);
  font-weight: bold;
  letter-spacing: 1.25px;
  padding: var(--spacing-sm) var(--spacing-md);
  transition: all 0.25s ease;
}

.secondary-btn {
  background-color: transparent;
  color: var(--primary-accent);
  padding: 0;
}

.primary-btn:hover {
  background-color: var(--primary-btn-hover);
  cursor: pointer;
}

.secondary-btn:hover {
  cursor: pointer;
  opacity: 0.75;
}

.with-arrow {
  align-items: center;
  display: flex;
  justify-content: center;
}

.with-arrow > img {
  transition: 0.25s ease;
}

.with-arrow:hover > img {
  transform: translateX(4px);
}

/* Layout Styles */

.section-container {
  max-width: var(--standard-width);
  width: 100%;
}

.two-column {
  align-items: flex-start;
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
}

.two-column > .col-left,
.two-column > .col-right {
  align-items: start;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0 var(--spacing-md) 0 0;
  width: 50%;
}

.two-column > .col-right {
  padding: 0 0 0 var(--spacing-md);
}

.card {
  align-items: flex-start;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding: var(--spacing-sm) var(--spacing-md) var(--spacing-sm) 0;
}

.card .icon {
  height: 50px;
  margin: 0 0 var(--spacing-sm) 0;
}

.card h3 {
  font-family: var(--heading-font);
  font-size: var(--h6-size);
  font-weight: 500;
  margin: 0;
  width: 100%;
}

/* Navbar */

.navbar {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
  padding: 0 var(--spacing-md);
  margin: var(--spacing-sm) 0 var(--spacing-xl) 0;
  max-width: var(--standard-width);
  width: 100%;
}

.menu {
  align-items: center;
  display: flex;
  justify-content: center;
  list-style: none;
}

.menu a {
  color: var(--text-light);
  font-weight: bold;
  margin: 0 var(--spacing-md);
}

.menu a:hover {
  color: var(--text-light);
  text-decoration: underline;
}

.navbar .navbar-btn {
  background: rgba(250, 250, 250, 0.25);
}

.navbar .navbar-btn:hover {
  background: rgba(250, 250, 250, 0.5);
}

.hamburger-btn {
  display: none;
}

/* Animated Gradient */
#animated-gradient {
  --gradient-color-1: #ef008f;
  --gradient-color-2: #6ec3f4;
  --gradient-color-3: #7038ff;
  --gradient-color-4: #ffba27;
  height: 970px;
  left: -50%;
  position: absolute;
  top: -600px;
  transform: rotate(-10deg);
  width: 200%;
  z-index: -1;
}

/* Hero Content */

.hero {
  display: flex;
  justify-content: center;
  width: 100%;
}

.hero p {
  max-width: 480px;
}

.btn-container {
  display: flex;
  margin: var(--spacing-md) 0;
}

.btn-container button:nth-of-type(2) {
  color: var(--purple-2);
  margin: 0 0 0 var(--spacing-md);
}

.hero .hero-phone-container {
  align-items: flex-end;
  height: 564px;
}

.hero-phone {
  height: 628px;
  transform: translate(32px, -32px);
}

/* Partners Section */

.partner-section {
  display: flex;
  justify-content: center;
  width: 100%;
}

.partners-grid {
  display: grid;
  gap: var(--spacing-lg) var(--spacing-md);
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  margin: var(--spacing-xl) 0;
}

.partners-grid img {
  height: 60px;
  place-self: center;
}

/* Unified Platform Section */

.unified-platform-section {
  background-color: var(--bg-light);
  display: flex;
  justify-content: center;
  padding: var(--spacing-xl) 0;
  width: 100%;
}

.unified-platform-section h2 {
  margin-bottom: var(--spacing-md);
  width: 50%;
}

.unified-platform-section .primary-btn {
  background-color: var(--purple-1);
  margin: var(--spacing-md) 0;
}

.unified-platform-section .primary-btn:hover {
  background-color: var(--primary-accent);
}

/* Graphic Grid Section */

.graphic-section {
  background-color: var(--bg-light);
  display: flex;
  justify-content: center;
  width: 100%;
}

.graphic-grid {
  display: grid;
  gap: var(--spacing-lg);
  grid-template-areas:
    'credit-card slack-invoice slack-invoice'
    'phone slack-invoice slack-invoice'
    'phone dash dash';
  padding: var(--spacing-lg) 0;
}

.graphic-grid img {
  border-radius: var(--standard-border-radius);
  box-shadow: var(--standard-box-shadow);
  width: 100%;
}

#credit-card {
  grid-area: credit-card;
}

#slack-invoice {
  grid-area: slack-invoice;
}

#phone {
  box-shadow: none;
  grid-area: phone;
}

#dash {
  grid-area: dash;
}
/* ... */

